syntax = "proto3";

package langchain;

service LangchainService {
  rpc createEmbeddings(stream Documents) returns (Empty) {}
  rpc getVectorStore(stream Documents) returns (VectorStoreString) {}
}

message Documents {
  string document = 1;
}

message VectorStoreString {
  string vectorStoreString = 1;
}

message Empty {}